--- a/index.html
+++ b/index.html
@@ -1669,19 +1669,14 @@
                 <div class="col4">
                   <div class="newsCard">
                     <div class="newsThumb">
-                      <a
-                        href="https://www.youtube.com/watch?v=-vtgFEjLh4o&ab_channel=ETVAndhraPradesh"
-                        class="glightbox3"
-                        ><img src="news/Etv.jpg"
+                      <a href="news/Tv9-2.mp4" class="glightbox3"
+                        ><img src="news/tv9-1.jpg"
                       /></a>
                     </div>
                     <div class="newsTitle">
                       <h3>
-                        <a
-                          href="https://www.youtube.com/watch?v=-vtgFEjLh4o&ab_channel=ETVAndhraPradesh"
-                          class="glightbox3"
-                          >Pranay Mithilesh of Vijayawada | Young Interior
-                          Designer | Shows Off His Massive Talent || Yuva
+                        <a href="news/Tv9-2.mp4" class="glightbox3">
+                          Telangana Architect Wins Prestigious FOAID-2024 Award
                         </a>
                       </h3>
                     </div>
@@ -1692,18 +1687,19 @@
                   <div class="newsCard">
                     <div class="newsThumb">
                       <a
-                        href="https://www.youtube.com/watch?v=VwTmeN1omTA&pp=ygUIZXllY2F0Y2g%3D"
+                        href="news/Pranay Nikhilesh Of Vijayawada  Young Interior Designer  Shows Off His Massive Talent  Yuva - Etv Andhra Pradesh (1080P, H264).mp4"
                         class="glightbox3"
-                        ><img src="https://placehold.co/600x350"
+                        ><img src="news/Etv-1.jpg"
                       /></a>
                     </div>
                     <div class="newsTitle">
                       <h3>
                         <a
-                          href="https://www.youtube.com/watch?v=VwTmeN1omTA&ab_channel=EyeCatchAdvertising"
+                          href="news/Pranay Nikhilesh Of Vijayawada  Young Interior Designer  Shows Off His Massive Talent  Yuva - Etv Andhra Pradesh (1080P, H264).mp4"
                           class="glightbox3"
-                          >EyeCatch Interiors | Our Client | Bhama Emporio |
-                          Vijayawada |
+                          >Pranay Nikhilesh Of Vijayawada Young Interior
+                          Designer Shows Off His Massive Talent Yuva - Etv
+                          Andhra Pradesh
                         </a>
                       </h3>
                     </div>
@@ -1714,23 +1710,45 @@
                   <div class="newsCard">
                     <div class="newsThumb">
                       <a
-                        href="https://www.youtube.com/watch?v=VwTmeN1omTA&pp=ygUIZXllY2F0Y2g%3D"
+                        href="news/Eyecatch Architecture & Interior Designing Gets National Leval Award In Foaid  T News - T News Telugu (720P, H264).mp4"
                         class="glightbox3"
-                        ><img src="https://placehold.co/600x350"
+                        ><img src="news/t news.jpg"
                       /></a>
                     </div>
                     <div class="newsTitle">
                       <h3>
                         <a
-                          href="https://www.youtube.com/watch?v=VwTmeN1omTA&ab_channel=EyeCatchAdvertising"
+                          href="news/Eyecatch Architecture & Interior Designing Gets National Leval Award In Foaid  T News - T News Telugu (720P, H264).mp4"
                           class="glightbox3"
-                          >EyeCatch Interiors | Our Client | Bhama Emporio |
-                          Vijayawada |
+                          >Eyecatch Architecture & Interior Designing Gets
+                          National Leval Award In Foaid T News - T News Telugu
                         </a>
                       </h3>
                     </div>
                   </div>
                 </div>
+                <!-- Col -->
+                <!-- <div class="col3">
+                  <div class="newsCard">
+                    <div class="newsThumb">
+                      <a
+                        href="news/Eyecatch Architecture & Interior Designing Gets National Leval Award In Foaid  T News - T News Telugu (720P, H264).mp4"
+                        class="glightbox3"
+                        ><img src="news/t news.jpg"
+                      /></a>
+                    </div>
+                    <div class="newsTitle">
+                      <h3>
+                        <a
+                          href="news/Eyecatch Architecture & Interior Designing Gets National Leval Award In Foaid  T News - T News Telugu (720P, H264).mp4"
+                          class="glightbox3"
+                          >Eyecatch Architecture & Interior Designing Gets
+                          National Leval Award In Foaid T News - T News Telugu
+                        </a>
+                      </h3>
+                    </div>
+                  </div>
+                </div> -->
                 <!-- Col -->
               </div>
             </section>
