--- a/news-events.html
+++ b/news-events.html
@@ -652,65 +652,6 @@
                   <li><a href="#">Photos</a></li>
                 </ul>
               </div> -->
-              <div class="newsCard">
-                <div class="cardHeader">
-                  <div class="logoIcon">
-                    <img src="/images/logo.png" alt="eyecatch architects" />
-                  </div>
-                  <div class="newsInfo">
-                    <div class="newsTitle">
-                      <h2>Functional, yet visually stunning solutions.</h2>
-                    </div>
-                    <div class="newsMeta">
-                      <div class="newsCategory">News, Video,</div>
-                      <div class="newsDate">Tuesday February 11, 2025</div>
-                    </div>
-                  </div>
-                </div>
-                <!-- Card Header -->
-                <div class="cardBody">
-                  <div class="newsVideo">
-                    <video controls>
-                      <source
-                        src="/news/1.mp4"
-                        type="video/mp4"
-                        poster="/images/blank.png"
-                      />
-
-                      Your browser does not support the video tag.
-                    </video>
-                  </div>
-                  <!-- <p>
-                    Step into Perumal Silks and be captivated by India's largest
-                    in-store Tanjore masterpiece-a 450-foot mural depicting Lord
-                    Perumal's divine journey and celestial wedding. This
-                    monumental artwork not only honours our namesake but also
-                    immerses you in the rich tapestry of tradition and devotion,
-                    enhancing your shopping experience with cultural grandeur.
-                  </p> -->
-                </div>
-                <!-- Card Body -->
-                <div class="cardFooter">
-                  <div class="newsActions">
-                    <span>Like</span
-                    ><span class="likeIcon"
-                      ><a href="#" target="_blank"
-                        ><i class="bi bi-hand-thumbs-up"></i></a
-                    ></span>
-                  </div>
-                  <div class="newsShare">
-                    <span>Share:</span>
-                    <div class="shareIcons">
-                      <span><img src="/images/facebook.svg" /></span>
-                      <span><img src="/images/twitter.svg" /></span>
-                      <span><img src="/images/instagram.svg" /></span>
-                      <span><img src="/images/linkedin.svg" /></span>
-                    </div>
-                  </div>
-                </div>
-                <!-- Card Footer -->
-              </div>
-              <!-- News Card -->
 
               <div class="newsCard">
                 <div class="cardHeader">
@@ -1092,7 +1033,7 @@
                   <div class="newsVideo">
                     <video controls>
                       <source
-                        src="news/Maps Reel 1500X850.mp4"
+                        src="news/Ec Maps 16X 9.mp4"
                         type="video/mp4"
                         poster="/images/blank.png"
                       />
@@ -1147,7 +1088,7 @@
                   <div class="newsVideo">
                     <video controls>
                       <source
-                        src="news/Eyecatch Usp 1500X850.mp4"
+                        src="news/Eyecatch Usp16x9.mp4"
                         type="video/mp4"
                         poster="/images/blank.png"
                       />
@@ -1158,6 +1099,66 @@
                   <!-- <p>
                     Lorem Ipsum is simply dummy text of the printing and
                     typesetting industry.
+                  </p> -->
+                </div>
+                <!-- Card Body -->
+                <div class="cardFooter">
+                  <div class="newsActions">
+                    <span>Like</span
+                    ><span class="likeIcon"
+                      ><a href="#" target="_blank"
+                        ><i class="bi bi-hand-thumbs-up"></i></a
+                    ></span>
+                  </div>
+                  <div class="newsShare">
+                    <span>Share:</span>
+                    <div class="shareIcons">
+                      <span><img src="/images/facebook.svg" /></span>
+                      <span><img src="/images/twitter.svg" /></span>
+                      <span><img src="/images/instagram.svg" /></span>
+                      <span><img src="/images/linkedin.svg" /></span>
+                    </div>
+                  </div>
+                </div>
+                <!-- Card Footer -->
+              </div>
+              <!-- News Card -->
+
+              <div class="newsCard">
+                <div class="cardHeader">
+                  <div class="logoIcon">
+                    <img src="/images/logo.png" alt="eyecatch architects" />
+                  </div>
+                  <div class="newsInfo">
+                    <div class="newsTitle">
+                      <h2>Functional, yet visually stunning solutions.</h2>
+                    </div>
+                    <div class="newsMeta">
+                      <div class="newsCategory">News, Video,</div>
+                      <div class="newsDate">Wednesday February 5, 2025</div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Card Header -->
+                <div class="cardBody">
+                  <div class="newsVideo">
+                    <video controls>
+                      <source
+                        src="/news/1.mp4"
+                        type="video/mp4"
+                        poster="/images/blank.png"
+                      />
+
+                      Your browser does not support the video tag.
+                    </video>
+                  </div>
+                  <!-- <p>
+                    Step into Perumal Silks and be captivated by India's largest
+                    in-store Tanjore masterpiece-a 450-foot mural depicting Lord
+                    Perumal's divine journey and celestial wedding. This
+                    monumental artwork not only honours our namesake but also
+                    immerses you in the rich tapestry of tradition and devotion,
+                    enhancing your shopping experience with cultural grandeur.
                   </p> -->
                 </div>
                 <!-- Card Body -->
