--- a/projects.html
+++ b/projects.html
@@ -2379,16 +2379,12 @@
                         <li class="ss-carousel__item textBlock">
                           <div class="ss-carousel__description">
                             <p>
-                              Inspired by the grandeur of Indian temples, this
-                              showroom design embodies heritage, craftsmanship,
-                              and spirituality, blending tradition with timeless
-                              elegance. The exterior elevation reinterprets
-                              temple architecture with an inviting openness.
-                              Upon entry, a 5-foot teakwood-carved blessing hand
-                              of Lord Venkateshwara Swamy offers assurance and
-                              auspiciousness. Suspended above, 200 kg of
-                              intricately carved teakwood pillars replicate the
-                              essence of temple architecture.
+                              A Temple-Inspired Retail Experience Located in
+                              Nellore, Andhra Pradesh, Perumal Silks reimagines
+                              the saree as a sacred icon. Inspired by temple
+                              architecture, the interiors reflect purity through
+                              intricate carvings, sacred geometry, and
+                              decorative columns.
                             </p>
                           </div>
                         </li>
@@ -2522,6 +2518,17 @@
                             is India's largest retail mural.
                           </p>
                         </li>
+                        <li class="ss-carousel__item textBlock">
+                          <div class="ss-carousel__description">
+                            <p>
+                              Loom-shaped racks, wooden trumpets, and India's
+                              largest in-store Tanjore mural (450 sq.
+                              ft.)—depicting Lord Perumal’s celestial
+                              wedding—celebrate heritage in an emotionally rich
+                              setting.
+                            </p>
+                          </div>
+                        </li>
                         <li class="ss-carousel__item imgBlock vertical">
                           <img
                             class="ss-carousel__item__image"
@@ -2543,6 +2550,24 @@
                           <button class="mute-toggle">
                             <i class="fas fa-volume-mute"></i>
                           </button>
+                        </li>
+                        <li class="ss-carousel__item textBlock">
+                          <div class="ss-carousel__description">
+                            <p>
+                              Design highlights include a 5-ft teakwood Hastham,
+                              200 kg suspended pillars, and a bridal Pallaki
+                              adorned with Kalamkari panels in the lehenga
+                              section.
+                            </p>
+                            <p>
+                              Facing a major road, the temple-style façade
+                              offers powerful cultural recall and strong brand
+                              visibility. Inside, warm lighting, ambient music,
+                              and tactile finishes guide visitors through
+                              sanctum-like zones, echoing a temple procession
+                              with grace and reverence.
+                            </p>
+                          </div>
                         </li>
 
                         <li class="ss-carousel__item slideBlock">
