--- a/index.html
+++ b/index.html
@@ -1686,9 +1686,7 @@
                 <div class="col4">
                   <div class="newsCard">
                     <div class="newsThumb">
-                      <a
-                        href="news/Pranay Nikhilesh Of Vijayawada  Young Interior Designer  Shows Off His Massive Talent  Yuva - Etv Andhra Pradesh (1080P, H264).mp4"
-                        class="glightbox3"
+                      <a href="news/etv.mp4" class="glightbox3"
                         ><img src="news/Etv-1.jpg"
                       /></a>
                     </div>
